--- a/app2/.env
+++ b/app2/.env
@@ -1,1 +1,1 @@
-REMOTE_URL = "http://localhost:3002"
+REMOTE_URL = "https://cdn.jsdelivr.net/gh/marcofalcone/federated-library-from-cdn@master/remoteLibrary/dist/remoteEntry.js"
