--- a/app2/package.json
+++ b/app2/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "host2",
+  "name": "app2",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -15,6 +15,7 @@
   "devDependencies": {
     "@babel/core": "7.15.8",
     "@babel/preset-react": "7.14.5",
+    "@babel/preset-env": "7.15.8",
     "babel-loader": "8.2.5",
     "css-loader": "6.2.0",
     "html-webpack-plugin": "5.3.2",
